--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,6 @@ mybatis.type-aliases-package=com.hr.management.model
 mybatis.check-config-location=true
 
 apiPrefix=api/v1
+jwt.expiration=2592000
+jwt.secretKey= MS7FtvYh1Q2g1CKacsmBa3RwVY5jxKxQNseclfqI6TY=
 
