Fixing constraint foreign key and Creating request filtering

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ apiPrefix=api/v1
 jwt.expiration=2592000
 jwt.secretKey= MS7FtvYh1Q2g1CKacsmBa3RwVY5jxKxQNseclfqI6TY=
 
+logging.level.org.springframework.web=DEBUG
+logging.level.com.fasterxml.jackson=DEBUG
+
+
