--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,19 @@
 			<artifactId>assertj-core</artifactId>
 			<version>3.22.0</version>
 		</dependency>
+		<!--	Cloudinary-->
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.39.0</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.16.1</version>
+		</dependency>
+
+		<!--	Cloudinary-->
 	</dependencies>
 
 	<build>
